Add Category Block | Under Development

--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
         </div>
     </ul>
 
+    <div class="categories">
+        <div class="category-content">
+            <div class="category-info">
+                <h1>Spaces Category</h1>
+
+            </div>
+            <div class="category-info">
+                <h1>Equipments Category</h1>
+            </div>
+        </div>
+    </div>
+
     <div class="footer-content">
         <footer>
             <p>© <span class="current-date">2025</span> Fadi Yousif. All Rights Reserved.</p>
