Add Images and text in the page | WIP

--- a/index.html
+++ b/index.html
@@ -22,10 +22,25 @@
         <div class="category-content">
             <div class="category-info">
                 <h1>Spaces Category</h1>
-
+                <div class="category-data">
+                    <div class="category-lists">
+                        <p>Meeting Rooms</p>
+                        <img src="./img/landing/meetings.jpg">
+                    </div>
+                    <div class="category-lists">
+                        <p>Kitchen Rooms</p>
+                        <img src="./img/landing/meetings.jpg">
+                    </div>
+                    <div class="category-lists">
+                        <p>Office Rooms</p>
+                        <img src="./img/landing/meetings.jpg">
+                    </div>
+                </div>
             </div>
             <div class="category-info">
                 <h1>Equipments Category</h1>
+                <div class="category-data">
+                </div>
             </div>
         </div>
     </div>
