--- a/authentication.html
+++ b/authentication.html
@@ -17,6 +17,32 @@
         </div>
     </ul>
 
+    <div class="auth-body">
+        <div class="container">
+            <div id="login-form">
+                <h2>Login</h2>
+                <form onsubmit="return validateLogin()">
+                    <input type="text" id="login-username" placeholder="Username" required>
+                    <input type="password" id="login-password" placeholder="Password" required>
+                    <button type="submit">Login</button>
+                </form>
+                <p class="toggle" onclick="toggleForms()">Don't have an account? Sign up</p>
+            </div>
+        
+            <div id="signup-form" style="display: none;">
+                <h2>Sign Up</h2>
+                <form onsubmit="return validateSignup()">
+                    <input type="text" id="signup-username" placeholder="Username" required>
+                    <input type="email" id="signup-email" placeholder="Email" required>
+                    <input type="password" id="signup-password" placeholder="Password" required>
+                    <button type="submit">Sign Up</button>
+                </form>
+                <p class="toggle" onclick="toggleForms()">Already have an account? Login</p>
+            </div>
+        </div>
+    </div>
+
+
     <div class="footer-content">
         <footer>
             <p>© <span class="current-date">2025</span> Fadi Yousif. All Rights Reserved.</p>
