--- a/index.html
+++ b/index.html
@@ -36,10 +36,28 @@
                         <img src="./img/landing/meetings.jpg">
                     </div>
                 </div>
+                <div class="button-container">
+                    <a href="listing.html">View Spaces Category</a>
+                </div>
             </div>
             <div class="category-info">
                 <h1>Equipments Category</h1>
                 <div class="category-data">
+                    <div class="category-lists">
+                        <p>Meeting Rooms</p>
+                        <img src="./img/landing/meetings.jpg">
+                    </div>
+                    <div class="category-lists">
+                        <p>Kitchen Rooms</p>
+                        <img src="./img/landing/meetings.jpg">
+                    </div>
+                    <div class="category-lists">
+                        <p>Office Rooms</p>
+                        <img src="./img/landing/meetings.jpg">
+                    </div>
+                </div>
+                <div class="button-container">
+                    <a href="listing.html">View Equipments Category</a>
                 </div>
             </div>
         </div>
