--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                     </div>
                     <div class="category-lists">
                         <p>Kitchen Rooms</p>
-                        <img src="./img/landing/meetings.jpg">
+                        <img src="./img/landing/kitchen.jpg">
                     </div>
                     <div class="category-lists">
                         <p>Office Rooms</p>
-                        <img src="./img/landing/meetings.jpg">
+                        <img src="./img/landing/offices.jpg">
                     </div>
                 </div>
                 <div class="button-container">
@@ -44,16 +44,16 @@
                 <h1>Equipments Category</h1>
                 <div class="category-data">
                     <div class="category-lists">
-                        <p>Meeting Rooms</p>
-                        <img src="./img/landing/meetings.jpg">
+                        <p>Printers</p>
+                        <img src="./img/landing/printers.jpg">
                     </div>
                     <div class="category-lists">
-                        <p>Kitchen Rooms</p>
-                        <img src="./img/landing/meetings.jpg">
+                        <p>Copiers</p>
+                        <img src="./img/landing/copiers.jpg">
                     </div>
                     <div class="category-lists">
-                        <p>Office Rooms</p>
-                        <img src="./img/landing/meetings.jpg">
+                        <p>Stationaries</p>
+                        <img src="./img/landing/stationaries.jpg">
                     </div>
                 </div>
                 <div class="button-container">
