Making Images One Universal Size

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
                 <div class="category-data">
                     <div class="category-lists">
                         <p>Meeting Rooms</p>
-                        <img src="./img/landing/meetings.jpg">
+                        <img src="./img/landing/meetings.png">
                     </div>
                     <div class="category-lists">
                         <p>Kitchen Rooms</p>
-                        <img src="./img/landing/kitchen.jpg">
+                        <img src="./img/landing/kitchen.png">
                     </div>
                     <div class="category-lists">
                         <p>Office Rooms</p>
-                        <img src="./img/landing/offices.jpg">
+                        <img src="./img/landing/offices.png">
                     </div>
                 </div>
                 <div class="button-container">
@@ -45,15 +45,15 @@
                 <div class="category-data">
                     <div class="category-lists">
                         <p>Printers</p>
-                        <img src="./img/landing/printers.jpg">
+                        <img src="./img/landing/printers.png">
                     </div>
                     <div class="category-lists">
                         <p>Copiers</p>
-                        <img src="./img/landing/copiers.jpg">
+                        <img src="./img/landing/copiers.png">
                     </div>
                     <div class="category-lists">
                         <p>Stationaries</p>
-                        <img src="./img/landing/stationaries.jpg">
+                        <img src="./img/landing/stationaries.png">
                     </div>
                 </div>
                 <div class="button-container">
