Improve Phone Responsiveness on landing page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="listing.html">Listing</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="authentication" class="active">Login/Signup</a></li>
+            <li><a href="authentication.html" class="active">Login/Signup</a></li>
         </div>
     </ul>
 
