--- a/listing.html
+++ b/listing.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Listing</title>
+    <script src="./js/jquery-3.7.1.min.js"></script>
+
     <script src="./js/main.js"></script>
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/listing.css">
@@ -102,152 +104,7 @@
       </div>
   </div>
 
-
   <div class="item-grid">
-      <div class="item">
-          <div class="item-picture">Item Picture</div>
-          <div class="item-details">
-              <div class="detail-row">
-                  <span class="detail-label">Location</span>
-                  <span class="detail-rating">Rating</span>
-              </div>
-              <div class="detail-row">
-                  <span class="detail-label">Distance</span>
-              </div>
-              <div class="detail-row">
-                  <span class="detail-label">Date</span>
-              </div>
-              <div class="detail-row">
-                  <span class="detail-label">Price</span>
-              </div>
-          </div>
-      </div>
-      <div class="item">
-          <div class="item-picture">Item Picture</div>
-          <div class="item-details">
-              <div class="detail-row">
-                  <span class="detail-label">Location</span>
-                  <span class="detail-rating">Rating</span>
-              </div>
-              <div class="detail-row">
-                  <span class="detail-label">Distance</span>
-              </div>
-              <div class="detail-row">
-                  <span class="detail-label">Date</span>
-              </div>
-              <div class="detail-row">
-                  <span class="detail-label">Price</span>
-              </div>
-          </div>
-      </div>
-      <div class="item">
-          <div class="item-picture">Item Picture</div>
-          <div class="item-details">
-              <div class="detail-row">
-                  <span class="detail-label">Location</span>
-                  <span class="detail-rating">Rating</span>
-              </div>
-              <div class="detail-row">
-                  <span class="detail-label">Distance</span>
-              </div>
-              <div class="detail-row">
-                  <span class="detail-label">Date</span>
-              </div>
-              <div class="detail-row">
-                  <span class="detail-label">Price</span>
-              </div>
-          </div>
-      </div>
-      <div class="item">
-          <div class="item-picture">Item Picture</div>
-          <div class="item-details">
-              <div class="detail-row">
-                  <span class="detail-label">Location</span>
-                  <span class="detail-rating">Rating</span>
-              </div>
-              <div class="detail-row">
-                  <span class="detail-label">Distance</span>
-              </div>
-              <div class="detail-row">
-                  <span class="detail-label">Date</span>
-              </div>
-              <div class="detail-row">
-                  <span class="detail-label">Price</span>
-              </div>
-          </div>
-      </div>
-      <div class="item">
-          <div class="item-picture">Item Picture</div>
-          <div class="item-details">
-              <div class="detail-row">
-                  <span class="detail-label">Location</span>
-                  <span class="detail-rating">Rating</span>
-              </div>
-              <div class="detail-row">
-                  <span class="detail-label">Distance</span>
-              </div>
-              <div class="detail-row">
-                  <span class="detail-label">Date</span>
-              </div>
-              <div class="detail-row">
-                  <span class="detail-label">Price</span>
-              </div>
-          </div>
-      </div>
-      <div class="item">
-          <div class="item-picture">Item Picture</div>
-          <div class="item-details">
-              <div class="detail-row">
-                  <span class="detail-label">Location</span>
-                  <span class="detail-rating">Rating</span>
-              </div>
-              <div class="detail-row">
-                  <span class="detail-label">Distance</span>
-              </div>
-              <div class="detail-row">
-                  <span class="detail-label">Date</span>
-              </div>
-              <div class="detail-row">
-                  <span class="detail-label">Price</span>
-              </div>
-          </div>
-      </div>
-      <div class="item">
-          <div class="item-picture">Item Picture</div>
-          <div class="item-details">
-              <div class="detail-row">
-                  <span class="detail-label">Location</span>
-                  <span class="detail-rating">Rating</span>
-              </div>
-              <div class="detail-row">
-                  <span class="detail-label">Distance</span>
-              </div>
-              <div class="detail-row">
-                  <span class="detail-label">Date</span>
-              </div>
-              <div class="detail-row">
-                  <span class="detail-label">Price</span>
-              </div>
-          </div>
-      </div>
-      <div class="item">
-          <div class="item-picture">Item Picture</div>
-          <div class="item-details">
-              <div class="detail-row">
-                  <span class="detail-label">Location</span>
-                  <span class="detail-rating">Rating</span>
-              </div>
-              <div class="detail-row">
-                  <span class="detail-label">Distance</span>
-              </div>
-              <div class="detail-row">
-                  <span class="detail-label">Date</span>
-              </div>
-              <div class="detail-row">
-                  <span class="detail-label">Price</span>
-              </div>
-          </div>
-      </div>
   </div>
 
     <div class="footer-content">
