--- a/management.html
+++ b/management.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Properity Management</title>
+    <script src="./js/jquery-3.7.1.min.js"></script>
     <script src="./js/main.js"></script>
     <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -14,7 +15,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="listing.html">Listing</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="authentication.html" class="active">Login/Signup</a></li>
+            <li><a href="authentication.html">Logout</a></li>
         </div>
     </ul>
 
