--- a/authentication.html
+++ b/authentication.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Authentication</title>
+    <script src="./js/jquery-3.7.1.min.js"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/authentication.js"></script>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/authentication.css">
 </head>
 <body>
     <ul class="nav">
@@ -17,27 +20,27 @@
         </div>
     </ul>
 
-    <div class="auth-body">
-        <div class="container">
+    <div class="login-body">
+        <div class="login-container">
             <div id="login-form">
                 <h2>Login</h2>
-                <form onsubmit="return validateLogin()">
+                <form>
                     <input type="text" id="login-username" placeholder="Username" required>
                     <input type="password" id="login-password" placeholder="Password" required>
-                    <button type="submit">Login</button>
+                    <button type="login-button">Login</button>
                 </form>
-                <p class="toggle" onclick="toggleForms()">Don't have an account? Sign up</p>
+                <p class="toggle">Don't have an account? Sign up</p>
             </div>
         
             <div id="signup-form" style="display: none;">
                 <h2>Sign Up</h2>
-                <form onsubmit="return validateSignup()">
+                <form>
                     <input type="text" id="signup-username" placeholder="Username" required>
                     <input type="email" id="signup-email" placeholder="Email" required>
                     <input type="password" id="signup-password" placeholder="Password" required>
                     <button type="submit">Sign Up</button>
                 </form>
-                <p class="toggle" onclick="toggleForms()">Already have an account? Login</p>
+                <p class="toggle">Already have an account? Login</p>
             </div>
         </div>
     </div>
