--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Home</title>
     <script src="./js/jquery-3.7.1.min.js"></script>
     <script src="./js/main.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
@@ -64,10 +65,15 @@
         </div>
     </div>
 
-    <div class="footer-content">
-        <footer>
-            <p>© <span class="current-date">2025</span> Fadi Yousif. All Rights Reserved.</p>
-        </footer>
-    </div>
+  <div class="footer-content">
+    <footer>
+        <p>© <span class="current-date">2025</span> Group 4. All Rights Reserved.</p>
+        <div class="social-icons">
+            <button><i class="fab fa-facebook-f"></i></button>
+            <button><i class="fab fa-instagram"></i></button>
+            <button><i class="fab fa-twitter"></i></button>
+        </div>
+    </footer>
+  </div>
 </body>
 </html>
