--- a/listing.html
+++ b/listing.html
@@ -6,9 +6,12 @@
     <title>Listing</title>
     <script src="./js/jquery-3.7.1.min.js"></script>
 
-    <script src="./js/main.js"></script>
+    <script src="./js/main.js" defer></script>
+    <script src="./js/listing.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/listing.css">
+    
 </head>
 <body>
     <ul class="nav">
@@ -107,11 +110,15 @@
   <div class="item-grid">
   </div>
 
-    <div class="footer-content">
-        <footer>
-            <p>© <span class="current-date">2025</span> Fadi Yousif. All Rights Reserved.</p>
-        </footer>
-    </div>
-    <script src="./js/listing.js"></script>
+  <div class="footer-content">
+    <footer>
+        <p>© <span class="current-date">2025</span> Group 4. All Rights Reserved.</p>
+        <div class="social-icons">
+            <button><i class="fab fa-facebook-f"></i></button>
+            <button><i class="fab fa-instagram"></i></button>
+            <button><i class="fab fa-twitter"></i></button>
+        </div>
+    </footer>
+  </div>
 </body>
 </html>
