--- a/authentication.html
+++ b/authentication.html
@@ -15,7 +15,8 @@
     <ul class="nav">
         <span class="company-name"><a href="#">RentableBnB</a></span>
         <div class="navigation">
-            <li><a href="/">Home</a></li>
+                        <li><a href="./index.html">Home</a></li>
+
             <li><a href="listing.html">Listing</a></li>
             <li><a href="contact.html">Contact</a></li>
         </div>
