--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <ul class="nav">
         <span class="company-name"><a href="#">RentableBnB</a></span>
         <div class="navigation">
-            <li><a href="/">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="listing.html">Listing</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="authentication.html" class="active">Login/Signup</a></li>
