--- a/listing.html
+++ b/listing.html
@@ -16,7 +16,8 @@
     <ul class="nav">
         <span class="company-name"><a href="#">RentableBnB</a></span>
         <div class="navigation">
-            <li><a href="/">Home</a></li>
+                        <li><a href="./index.html">Home</a></li>
+
             <li><a href="listing.html">Listing</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="authentication.html" class="active">Login/Signup</a></li>
