--- a/listing.html
+++ b/listing.html
@@ -89,37 +89,19 @@
 
         <div class="filter-section">
             <h3 class="filter-section-title">Neighbourhood</h3>
-            <div class="bathroom-grid">
-                <div class="bathroom-option">Downtown</div>
-                <div class="bathroom-option">North</div>
-                <div class="bathroom-option">South</div>
-                <div class="bathroom-option">East</div>
-                <div class="bathroom-option">West</div>
-                <div class="bathroom-option">North-West</div>
-                <div class="bathroom-option">North-East</div>
-                <div class="bathroom-option">South-West</div>
-                <div class="bathroom-option">South-East</div>
-            </div>
+            <div class="search-containerr">
+                <input class="inputt" type="text" id="Neighbourhood" placeholder="Neighbourhood">
+                <!-- <button class=".buttonn" onclick="searchLocation()">Search</button> -->
+                <div id="result" class="result"></div>
+             </div>
         </div>
 
         <div class="filter-section">
-            <h3 class="filter-section-title">Type of Property</h3>
+            <h3 class="filter-section-title">Type of Workspace</h3>
             <div class="property-grid">
-                <div class="property-type">Apartment</div>
-                <div class="property-type">Duplex</div>
-                <div class="property-type">Acreage</div>
-                <div class="property-type">Condo Unit</div>
-                <div class="property-type">Main Floor</div>
-                <div class="property-type active">Office Space</div>
-                <div class="property-type">Loft</div>
-                <div class="property-type">Basement</div>
-                <div class="property-type">Parking Spot</div>
-                <div class="property-type">House</div>
-                <div class="property-type">Room For Rent</div>
-                <div class="property-type">Storage</div>
-                <div class="property-type">Townhouse</div>
-                <div class="property-type">Mobile</div>
-                <div class="property-type">Vacation Home</div>
+                <div class="property-type">Meeting Room</div>
+                <div class="property-type">Private Office</div>
+                <div class="property-type">Open desk</div>
             </div>
         </div>
 
@@ -142,31 +124,6 @@
                     <input type="range" min="0" max="10000" value="2500" class="slider" id="min-slider">
                     <input type="range" min="0" max="10000" value="7500" class="slider" id="max-slider">
                 </div>
-            </div>
-        </div>
-
-        <div class="filter-section">
-            <h3 class="filter-section-title">Bedrooms</h3>
-            <div class="bedroom-grid">
-                <div class="bedroom-option">Studio</div>
-                <div class="bedroom-option">1 Bed</div>
-                <div class="bedroom-option">1 + Den</div>
-                <div class="bedroom-option">2 Beds</div>
-                <div class="bedroom-option">2 + Den</div>
-                <div class="bedroom-option">3 Beds</div>
-                <div class="bedroom-option">3 + Den</div>
-                <div class="bedroom-option">4+</div>
-            </div>
-        </div>
-
-        <div class="filter-section">
-            <h3 class="filter-section-title">Bathrooms</h3>
-            <div class="bathroom-grid">
-                <div class="bathroom-option">1</div>
-                <div class="bathroom-option">1.5</div>
-                <div class="bathroom-option">2</div>
-                <div class="bathroom-option">2.5</div>
-                <div class="bathroom-option">3+</div>
             </div>
         </div>
 
