--- a/authentication.html
+++ b/authentication.html
@@ -1,62 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Authentication</title>
     <script src="./js/jquery-3.7.1.min.js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/authentication.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/authentication.css">
-</head>
-<body>
+  </head>
+  <body>
     <ul class="nav">
-        <span class="company-name"><a href="#">RentableBnB</a></span>
-        <div class="navigation">
-                        <li><a href="./index.html">Home</a></li>
-
-            <li><a href="listing.html">Listing</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </div>
+      <span class="company-name">
+        <a href="#">RentableBnB</a>
+      </span>
+      <div class="navigation">
+        <li>
+          <a href="/">Home</a>
+        </li>
+        <li>
+          <a href="listing.html">Listing</a>
+        </li>
+        <li>
+          <a href="contact.html">Contact</a>
+        </li>
+      </div>
     </ul>
-
     <div class="login-body">
-        <div class="login-container">
-            <div id="login-form">
-                <h2>Login</h2>
-                <form>
-                    <input type="text" id="login-username" placeholder="Username" required>
-                    <input type="password" id="login-password" placeholder="Password" required>
-                    <button type="login-button">Login</button>
-                </form>
-                <p class="toggle">Don't have an account? Sign up</p>
-            </div>
-        
-            <div id="signup-form" style="display: none;">
-                <h2>Sign Up</h2>
-                <form>
-                    <input type="text" id="signup-username" placeholder="Username" required>
-                    <input type="email" id="signup-email" placeholder="Email" required>
-                    <input type="password" id="signup-password" placeholder="Password" required>
-                    <button type="submit">Sign Up</button>
-                </form>
-                <p class="toggle">Already have an account? Login</p>
-            </div>
+      <div class="login-container">
+        <div id="login-form">
+          <h1>Login</h1>
+          <form>
+            <input type="text" id="login-username" placeholder="Username" required>
+            <input type="password" id="login-password" placeholder="Password" required>
+            <button type="login-button">Login</button>
+          </form>
+          <p class="toggle">Don't have an account? Sign up</p>
         </div>
+        <div id="signup-form" style="display: none;">
+          <h2>Sign Up</h2>
+          <form>
+
+            <select id="cars">
+            <option value="volvo" disabled selected>Choose a role:</option>
+            <option value="owner">Owner</option>
+            <option value="coworker">Coworker</option>
+            </select>
+            <input type="text" id="signup-Full Name" placeholder="Full Name" required>
+            <input type="text" id="signup-username" placeholder="Username" required>
+            <input type="email" id="signup-email" placeholder="Email" required>
+            <input type="text" id="signup-Phone Number" placeholder="Phone Number" required>
+            <input type="password" id="signup-password" placeholder="Password" required>
+            <button type="submit">Sign Up</button>
+          </form>
+          <p class="toggle">Already have an account? Login</p>
+        </div>
+      </div>
     </div>
-
-
-  <div class="footer-content">
-    <footer>
-        <p>© <span class="current-date">2025</span> Group 4. All Rights Reserved.</p>
-        <div class="social-icons">
-            <button><i class="fab fa-facebook-f"></i></button>
-            <button><i class="fab fa-instagram"></i></button>
-            <button><i class="fab fa-twitter"></i></button>
-        </div>
-    </footer>
-  </div>
-</body>
+    </div>
+    <div class="footer-content">
+      <footer>
+        <p>© <span class="current-date">2025</span> Group 4. All Rights Reserved. </p>
+      </footer>
+    </div>
+  </body>
 </html>
