Renamed categories section to workspaces
Implemented user authentication check on the homepage to display user navigation items and authentication status.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <script src="./js/jquery-3.7.1.min.js"></script>
+    <script src="./js/config.js"></script>
     <script src="./js/main.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/main.css">
@@ -12,57 +13,35 @@
 <body>
     <ul class="nav">
         <span class="company-name"><a href="#">RentableBnB</a></span>
-        <div class="navigation">
+        <div class="navigation" id="nav-items">
             <li><a href="#">Home</a></li>
             <li><a href="listing.html">Listing</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="authentication.html" class="active">Login/Signup</a></li>
+            <li id="auth-link"><a href="authentication.html" class="active">Login/Signup</a></li>
         </div>
     </ul>
 
-    <div class="categories">
-        <div class="category-content">
-            <div class="category-info">
-                <h1>Spaces Category</h1>
-                <div class="category-data">
-                    <div class="category-lists">
+    <div class="worskspaces">
+            <div class="workspace-info">
+                <h1>Avaliable Workspaces</h1>
+                <div class="workspace-data">
+                    <div class="workspace-lists">
                         <p>Meeting Rooms</p>
                         <img src="./img/landing/meetings.png">
                     </div>
-                    <div class="category-lists">
+                    <div class="workspace-lists">
                         <p>Kitchen Rooms</p>
                         <img src="./img/landing/kitchen.png">
                     </div>
-                    <div class="category-lists">
+                    <div class="workspace-lists">
                         <p>Office Rooms</p>
                         <img src="./img/landing/offices.png">
                     </div>
                 </div>
                 <div class="button-container">
-                    <a href="listing.html">View Spaces Category</a>
+                    <a href="listing.html">View Listings</a>
                 </div>
             </div>
-            <div class="category-info">
-                <h1>Equipments Category</h1>
-                <div class="category-data">
-                    <div class="category-lists">
-                        <p>Printers</p>
-                        <img src="./img/landing/printers.png">
-                    </div>
-                    <div class="category-lists">
-                        <p>Copiers</p>
-                        <img src="./img/landing/copiers.png">
-                    </div>
-                    <div class="category-lists">
-                        <p>Stationaries</p>
-                        <img src="./img/landing/stationaries.png">
-                    </div>
-                </div>
-                <div class="button-container">
-                    <a href="listing.html">View Equipments Category</a>
-                </div>
-            </div>
-        </div>
     </div>
 
   <div class="footer-content">
