Redirects unauthenticated users to login page
Makes sure if status code is 401 (Unauthorized) redirect user to authentication page and confirm roles are correct for user.

--- a/listing.html
+++ b/listing.html
@@ -6,13 +6,14 @@
     <title>Listing</title>
     <script src="./js/jquery-3.7.1.min.js"></script>
     <script src="./js/config.js"></script>
+    <script src="./js/main.js"></script>
     <script src="./js/listing.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/listing.css">
 </head>
-<body>
+<body class="listing-body">
 
     <ul class="nav">
         <span class="company-name"><a href="#">RentableBnB</a></span>
