--- a/management.html
+++ b/management.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/management.css">
 </head>
-<body>
+<body class="management-body">
     <ul class="nav" >
         <span class="company-name"><a href="#">RentableBnB</a></span>
         <div class="navigation" id="nav-items">
