--- a/edit_profile.html
+++ b/edit_profile.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/edit_profile.css">
 </head>
-<body>
+<body class="edit-profile-body">
     <ul class="nav">
         <span class="company-name"><a href="#">RentableBnB</a></span>
         <div class="navigation" id="nav-items">
