Include Correct Redirection for pages.

--- a/edit_profile.html
+++ b/edit_profile.html
@@ -16,7 +16,7 @@
     <ul class="nav">
         <span class="company-name"><a href="#">RentableBnB</a></span>
         <div class="navigation" id="nav-items">
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="listing.html">Listing</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li id="auth-link"><a href="authentication.html" class="active">Login/Signup</a></li>
