--- a/authentication.html
+++ b/authentication.html
@@ -20,7 +20,7 @@
       </span>
       <div class="navigation">
         <li>
-          <a href="/">Home</a>
+          <a href="index.html">Home</a>
         </li>
         <li>
           <a href="listing.html">Listing</a>
