--- a/edit_profile.html
+++ b/edit_profile.html
@@ -9,6 +9,7 @@
     <script src="./js/config.js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/edit_profile.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/edit_profile.css">
 </head>
@@ -62,8 +63,13 @@
 
     <div class="footer-content">
         <footer>
-          <p>© <span class="current-date">2025</span> Group 4. All Rights Reserved. </p>
+            <p>© <span class="current-date">2025</span> Group 4. All Rights Reserved.</p>
+            <div class="social-icons">
+                <button><i class="fab fa-facebook-f"></i></button>
+                <button><i class="fab fa-instagram"></i></button>
+                <button><i class="fab fa-twitter"></i></button>
+            </div>
         </footer>
-    </div>
+      </div>
 </body>
 </html>
