--- a/listing.html
+++ b/listing.html
@@ -167,12 +167,9 @@
             <!-- Capacity Filter -->
             <div class="filter-section">
                 <h3 class="filter-section-title">Capacity</h3>
-                <div class="option-grid">
-                    <div class="option">1</div>
-                    <div class="option">2</div>
-                    <div class="option">3</div>
-                    <div class="option">4</div>
-                    <div class="option">5</div>
+                <div class="capacity-input">
+                    <label for="capacity">Enter Capacity:</label>
+                    <input type="number" id="capacity" placeholder="e.g., 5" min="1">
                 </div>
             </div>
 
